packages/infrastructure/definitions/public-api/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: public-api
  namespace: social-network
  labels:
    stage: production
    name: public-api
    app: social-network
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        stage: production
        name: public-api
        app: social-network
    spec:
      containers:
      - name: public-api
        image: davidchristie/public-api:${VERSION}
