packages/infrastructure/definitions/public-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: public-api
  namespace: social-network
  labels:
    stage: production
    name: public-api
    app: social-network-template
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30022
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: social-network-template
    name: public-api
    stage: production
  sessionAffinity: None
  type: LoadBalancer
